refactor, tune and fix some stuff for benchmarks